link_libraries(ffnn)

add_executable(ex_basic.exe ex_basic/main.cpp)
add_executable(ex_beta.exe ex_beta/main.cpp)
add_executable(ex_actf.exe ex_actf/main.cpp)
add_executable(ex_propagate.exe ex_propagate/main.cpp)
add_executable(ex_xderiv.exe ex_xderiv/main.cpp)
add_executable(ex_vderiv.exe ex_vderiv/main.cpp)
add_executable(ex_plot.exe ex_plot/main.cpp)
add_executable(ex_loadfile.exe ex_loadfile/main.cpp)
add_executable(ex_fit.exe ex_fit/main.cpp)
add_executable(ex_features.exe ex_features/main.cpp)
